Not acceptable exception handle added, swagger file updated
